--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
   "rich==14.2.0",
   "pyjwt==2.10.1",
   "websockets==14.1",
-  "python-multipart==0.0.20"
+  "python-multipart==0.0.20",
+  "platformdirs==4.5.1"
 ]
 
 [project.scripts]
